Table admins {
  id int [pk, increment]
  username varchar(50) [not null, unique]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  password_updated_at datetime [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  is_active varchar(10) [not null, default: 'active']
}

Table departments {
  id varchar(50) [pk]
  name varchar(255)
}

Table courses {
  id int [pk, increment]
  course_id varchar(255) [unique]
  course_name varchar(255)
}

Table students {
  id int [pk, increment]
  student_name varchar(255) [not null]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  course_id int [not null]
  department_id varchar(50)
  password_updated_at datetime
  cpa float [default: 0.0]
  failed_subjects_number int [default: 0]
  study_subjects_number int [default: 0]
  total_learned_credits int [default: 0]
  total_failed_credits int [default: 0]
  year_level varchar(20) [default: 'Trinh do nam 1']
  warning_level varchar(50) [default: 'Canh cao muc 0']
  level_3_warning_number int [default: 0]
}

Table password_reset_tokens {
  id int [pk, increment]
  user_type varchar(20) [not null]
  user_id int [not null]
  email varchar(255) [not null]
  token_hash varchar(255) [not null, unique]
  expires_at datetime [not null]
  used boolean [not null, default: false]
  used_at datetime
  request_ip varchar(64)
  user_agent varchar(512)
  created_at datetime [not null]
}

Table feedbacks {
  id int [pk, increment]
  email varchar(255) [not null]
  subject varchar(32) [not null]
  feedback text [not null]
  suggestions text
  status varchar(32) [not null, default: 'pending']
  created_at datetime
  updated_at datetime
}

Table faqs {
  id int [pk, increment]
  question text [not null]
  answer text [not null]
  is_active boolean [not null, default: true]
  order_index int [not null, default: 0]
  created_at datetime
  updated_at datetime
}

Ref: students.course_id > courses.id
Ref: students.department_id > departments.id
Ref: students.id < password_reset_tokens.user_id
